crates/math-core/tests/snapshots/custom_cmd_test__let_to_equals.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\let\\eq==x\\eq y"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mi>y</mi>
</math>
