crates/math-core/tests/snapshots/custom_cmd_test__newcommand_across_snippets.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\bb{C}"
---
<math>
    <mi>ℂ</mi>
</math>
