crates/math-core/tests/snapshots/custom_cmd_test__newcommand_arg_in_text.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\txt}[1]{\\text{a#1b}}\\txt{xy}"
---
<math>
    <mtext>axyb</mtext>
</math>
