crates/math-core/tests/snapshots/custom_cmd_test__newcommand_empty_arg_as_group.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\p}[1]{x^#1}\\p{}"
---
<math>
    <msup>
        <mi>x</mi>
        <mrow></mrow>
    </msup>
</math>
