crates/math-core/tests/snapshots/custom_cmd_test__newcommand_empty_body.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\nop}{}a\\nop b"
---
<math>
    <mi>a</mi>
    <mrow></mrow>
    <mi>b</mi>
</math>
