crates/math-core/tests/snapshots/custom_cmd_test__newcommand_empty_body_as_arg.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\nop}{}x^\\nop"
---
<math>
    <msup>
        <mi>x</mi>
        <mrow></mrow>
    </msup>
</math>
