crates/math-core/tests/snapshots/custom_cmd_test__newcommand_in_convert_all.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "n \\in \\zz"
---
<math>
    <mi>n</mi>
    <mo>∈</mo>
    <mi>ℤ</mi>
</math>
